crates/shipper-git/src/snapshots/shipper_git__snapshot_tests__dirty_default_behavior.snap
---
source: crates/shipper-git/src/lib.rs
expression: result
---
dirty_field: ~
is_dirty_result: true
