crates/shipper-git/src/snapshots/shipper_git__snapshot_tests__ensure_git_clean_error.snap
---
source: crates/shipper-git/src/lib.rs
expression: err.to_string()
---
git working tree has uncommitted changes. Use --allow-dirty to bypass.
