crates/shipper-git/src/snapshots/shipper_git__snapshot_tests__git_context_commit_only.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
commit: deadbeefdeadbeefdeadbeefdeadbeefdeadbeef
branch: ~
tag: ~
dirty: ~
