crates/shipper-git/src/snapshots/shipper_git__snapshot_tests__git_context_dirty_no_tag.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
commit: ff00ff00ff00ff00ff00ff00ff00ff00ff00ff00
branch: feature/add-tests
tag: ~
dirty: true
