crates/shipper-git/src/snapshots/shipper_git__snapshot_tests__git_context_full.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
commit: a1b2c3d4e5f6a1b2c3d4e5f6a1b2c3d4e5f6a1b2
branch: main
tag: v1.2.3
dirty: false
