crates/shipper-git/src/snapshots/shipper_git__snapshot_tests__git_status_failed_error.snap
---
source: crates/shipper-git/src/lib.rs
expression: err.to_string()
---
"git status failed: fatal: not a git repository"
