crates/shipper-git/src/snapshots/shipper_git__snapshot_tests__tag_absent.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
commit: "3333333333333333333333333333333333333333"
branch: develop
tag: ~
dirty: false
