crates/shipper-git/src/snapshots/shipper_git__snapshot_tests__tag_dirty_tree.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
commit: "4444444444444444444444444444444444444444"
branch: main
tag: v1.0.0
dirty: true
