crates/shipper-git/src/snapshots/shipper_git__snapshot_tests__tag_prerelease.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
commit: "2222222222222222222222222222222222222222"
branch: release/v3
tag: v3.0.0-rc.1
dirty: false
