crates/shipper-git/src/snapshots/shipper_git__snapshot_tests__tag_semver.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
commit: "1111111111111111111111111111111111111111"
branch: main
tag: v2.0.0
dirty: false
