crates/shipper-git/src/snapshots/shipper_git__snapshot_tests__unknown_dirty_state.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
commit: abc1234567890abc1234567890abc1234567890ab
branch: main
tag: ~
dirty: ~
